javacc/Parser.jj
options
{
    LOOKAHEAD=2;
}

PARSER_BEGIN(Parser)


import java.io.StringReader;

public class Parser {
    public Parser(StringReader stringReader) throws ParseException{

        //System.out.println("Write an arithmetic expression:");
		//Parser myProg = new Parser(System.in);
		/*SimpleNode root = */ Program(); // returns reference to root node

		//root.dump(""); // prints the tree on the screen

		//System.out.println("Expression value: "+myCalc.eval(root));
    }
}


PARSER_END(Parser)

SKIP :
{
	" " | "\r" | "\t"
}

TOKEN:
{
    	//< INTEGER: (["0"-"9"])+ >
    <IDENTIFIER: ["a"-"z", "A"-"Z"](["a"-"z", "A"-"Z", "0"-"9"])*>
	|   <INTEGERLITERAL: (["0"-"9"])+ >
}

void Program(): {}
{
    ImportDeclaration() ClassDeclaration() <EOF>
}

void ImportDeclaration(): {}
{
//    ("import" <IDENTIFIER> ("." <IDENTIFIER>)* ";")*
( "import" ["static"] <IDENTIFIER> [ "." <IDENTIFIER> "(" [ ( Type() | "void" ) ( "," ( Type() | "void" )  )* ] ")" [ Type() | "void" ] ] ";" )*
}

void ClassDeclaration(): {}
{
    "class" <IDENTIFIER> ("extends" <IDENTIFIER>)? "{"
    (VarDeclaration())*
    (MethodDeclaration())*
    "}"
}

void VarDeclaration(): {}
{
    Type() <IDENTIFIER> ";"
}

void MethodDeclaration(): {}
{
    "public" Type() <IDENTIFIER> "(" (Type() <IDENTIFIER> ("," Type() <IDENTIFIER>)*)? ")" "{"
    (VarDeclaration())*
    (Statement())*
    "return" Expression() ";"
    "}"
    | "public" "static" "void" "main" "(" "String" "[" "]" <IDENTIFIER> ")" "{"
      (VarDeclaration())*
      (Statement())*
      "}"
}

void Type(): {}
{
    "int" "[" "]" | "boolean" | "int" | <IDENTIFIER>
}

void Statement(): {}
{
    "{" (Statement())* "}"
    | "if" "(" Expression() ")" Statement() "else" Statement()
    | "while" "(" Expression() ")" Statement()
    | Expression() ";"
    | <IDENTIFIER> "=" Expression() ";"
    | <IDENTIFIER> "[" Expression() "]" "=" Expression() ";"
}

void Expression(): {}
{
    <INTEGERLITERAL> (SecondExpression())?
    | "true" (SecondExpression())?
    | "false" (SecondExpression())?
    | <IDENTIFIER> (SecondExpression())?
    | "this" (SecondExpression())?
    | "new" "int" "[" Expression() "]" SecondExpression()
    | "new" <IDENTIFIER> "(" ")" (SecondExpression())?
    | "!" Expression() (SecondExpression())?
    | "(" Expression() ")" (SecondExpression())?
}


void SecondExpression(): {}
{
    ("&&" | "<" | "+" | "-" | "*" | "/") Expression() (SecondExpression())?
    |"[" Expression() "]" (SecondExpression())?
    |"." "length" (SecondExpression())?
    |"." <IDENTIFIER> "(" (Expression() ("," Expression())*)? ")" (SecondExpression())?
}
